--- a/notebook/mongoDB_demo.ipynb
+++ b/notebook/mongoDB_demo.ipynb
@@ -12190,14 +12190,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5e23490d",
    "metadata": {},
    "outputs": [],
    "source": [
     "DB_NAME  = \"Proj1\"\n",
     "COLLECTION_NAME = \"Proj1-Data\"\n",
-    "CONNECTION_URL = \"mongodb+srv://gsidique37:wDYAtTkPGBydBifh@cluster0.lkjtpfo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\"\n"
+    "CONNECTION_URL = \"use your own key\"\n"
    ]
   },
   {
